fix overflow for production

--- a/source/less/components/production.less
+++ b/source/less/components/production.less
@@ -32,8 +32,7 @@
   }
 
   @media @desktop {
-    flex-wrap: wrap;
-    height: 455px;
+    min-height: 455px;
     padding-bottom: 60px;
     margin-top: 30px;
   }
@@ -56,7 +55,8 @@
     align-items: flex-start;
     padding: 0;
     margin: 0;
-    margin-left: 18px;
+    margin-left: auto;
+    margin-right: 57px;
     margin-top: 40px;
     margin-bottom: 0;
   }
@@ -105,7 +105,8 @@
   @media @desktop {
     width: 230px;
     margin: 0;
-    margin-left: 18px;
+    margin-left: auto;
+    margin-right: 57px;
     margin-top: 34px;
   }
 }
@@ -120,6 +121,7 @@
   }
 
   @media @desktop {
+    position: absolute;
     margin-bottom: 0;
     width: 682px;
     height: 455px;
@@ -186,9 +188,10 @@
   }
 
   @media @desktop {
-    max-width: 230px;
+    width: 230px;
     margin: 0;
-    margin-left: 18px;
+    margin-left: auto;
+    margin-right: 57px;
     margin-top: auto;
   }
 }
